--- a/download.html
+++ b/download.html
@@ -18,19 +18,16 @@
         crossorigin="anonymous"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-primary">
-                <a class="navbar-brand" href="#">TopChoco</a>
+        <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">TopChoco</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="download.html">Download</a>
