--- a/404.html
+++ b/404.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Oops!!!!!<><><></title>
+    <title>Oops!!!!!<>
+            <>
+                <>
+    </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -18,30 +22,35 @@
         crossorigin="anonymous"></script>
 </head>
 <style>
-    img{
+    img {
         max-width: 100%;
     }
 </style>
+
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-danger">
-                <a class="navbar-brand" href="index.html">TopChoco</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="about/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="download.html">Download</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        <center>
-            <img src="404-no-browser.png" alt=""><br>
-        </center>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-danger">
+        <a class="navbar-brand" href="index.html">TopChoco</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about/about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="download.html">Download</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <center>
+        <img src="404-no-browser.png" alt=""><br>
+    </center>
 </body>
+
 </html>
