--- a/download.html
+++ b/download.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,29 +18,43 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </head>
+
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">TopChoco</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="about/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="download.html">Download</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <ul>
-                <li><a href="404.html">Python</a></li>
-                <li><a href="404.html">C</a></li>
-                <li><a href="404.html">Java</a></li>
-                <li><a href="404.html">Web development</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">TopChoco</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about/about.html">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="download.html">Download</a>
+                </li>
             </ul>
+        </div>
+    </nav>
+    <ul>
+        <li><a href="404.html">Python</a></li>
+        <li><a href="404.html">C</a></li>
+        <li><a href="404.html">Java</a></li>
+        <li><a href="404.html">Web development</a></li>
+    </ul>
 </body>
+
+<footer class="footer">
+    <center>
+        <a href="https://www.facebook.com/kittipot.laorgsri"><img src="about/facebook.png" class="image"></a>
+        <a href="https://twitter.com/Topfy5555"><img src="about/twitter.png" class="image"></a>
+        <a href="https://www.instagram.com/topchoco_kl/"><img src="about/instagram.png" class="image"></a>
+        <p>Copyright | TopChoco</p>
+    </center>
+</footer>
+
 </html>
