--- a/about/about.html
+++ b/about/about.html
@@ -30,6 +30,10 @@
         width: 40px;
         height: 40px;
     }
+    .font{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
 </style>
 
 <body>
