add my portfolio

--- a/download.html
+++ b/download.html
@@ -18,10 +18,16 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </head>
+<style>
+    img {
+        max-width: 50%;
+    }
+</style>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">TopChoco</a>
+        
+        <a class="navbar-brand" href="../index.html">TopChoco</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,19 +46,32 @@
             </ul>
         </div>
     </nav>
-    <ul>
-        <li><a href="404.html">Python</a></li>
-        <li><a href="404.html">C</a></li>
-        <li><a href="404.html">Java</a></li>
-        <li><a href="404.html">Web development</a></li>
-    </ul>
+    <center>
+        <div class="container">
+            <h2>My Experience (Coming Soon)</h2>
+            <hr>
+            <div class="row">
+                <div class="col-6 btn btn-outline-light">
+                    <a href="404.html"><img src="download/python.png"><br>Python</a>
+                </div>
+                <div class="col-6 btn btn-outline-light">
+                        <a href="404.html"><img src="download/C.png"><br>C</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 btn btn-outline-light">
+                        <a href="404.html"><img src="download/java.png"><br>Java</a>
+                </div>
+                <div class="col-6 btn btn-outline-light">
+                        <a href="404.html"><img src="download/web.png"><br>Web development</a>
+                </div>
+            </div>
+        </div>
+    </center>
 </body>
 
 <footer class="footer">
     <center>
-        <a href="https://www.facebook.com/kittipot.laorgsri"><img src="about/facebook.png" class="image"></a>
-        <a href="https://twitter.com/Topfy5555"><img src="about/twitter.png" class="image"></a>
-        <a href="https://www.instagram.com/topchoco_kl/"><img src="about/instagram.png" class="image"></a>
         <p>Copyright | TopChoco</p>
     </center>
 </footer>
