--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-danger">
-        <a class="navbar-brand" href="index.html">TopChoco</a>
+        <a class="navbar-brand" href="../index.html">TopChoco</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
