--- a/download.html
+++ b/download.html
@@ -52,28 +52,28 @@
             <hr>
             <div class="row">
                 <div class="col-6 btn btn-outline-light">
-                    <a href="404.html"><img src="download/python.png"><br>Python</a>
+                    <a href="404.html" class="btn"><img src="download/python.png"><br>Python</a>
                 </div>
                 <div class="col-6 btn btn-outline-light">
-                        <a href="404.html"><img src="download/C.png"><br>C</a>
+                        <a href="404.html" class="btn"><img src="download/C.png"><br>C</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-6 btn btn-outline-light">
-                        <a href="404.html"><img src="download/java.png"><br>Java</a>
+                        <a href="404.html" class="btn"><img src="download/java.png"><br>Java</a>
                 </div>
                 <div class="col-6 btn btn-outline-light">
-                        <a href="404.html"><img src="download/web.png"><br>Web development</a>
+                        <a href="404.html" class="btn"><img src="download/web.png"><br>Web development</a>
                 </div>
             </div>
         </div>
     </center>
 </body>
 
-<footer class="footer">
-    <center>
-        <p>Copyright | TopChoco</p>
-    </center>
-</footer>
+<div class="bg-dark">
+        <footer class="footer">
+            <p class="text-center text-white">Copyright 2019 | TopChoco</p>
+        </footer>
+    </div>
 
 </html>
