--- a/about/about.html
+++ b/about/about.html
@@ -73,12 +73,12 @@
         <p><img src="telephone.png" class="tel"> : 080-8100950</p>
     </div>
 </body>
-<footer class="footer">
+<footer class="footer bg-dark">
         <center>
                 <a href="https://www.facebook.com/kittipot.laorgsri"><img src="facebook.png" class="image"></a>
                 <a href="https://twitter.com/Topfy5555"><img src="twitter.png" class="image"></a>
                 <a href="https://www.instagram.com/topchoco_kl/"><img src="instagram.png" class="image"></a>
-                <p>Copyright | TopChoco</p>
+                <p class="text-white">Copyright | TopChoco</p>
         </center>
     </footer>
 </html>
