--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Kanit:300&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
 </head>
 <style>
@@ -26,6 +27,7 @@
         background-position-x: center;
         background-position-y: center;
         background-repeat: repeat;
+        font-family: 'Kanit', sans-serif;
     }
 
     @keyframes animation {
@@ -95,43 +97,45 @@
             <hr>
             <div class="card-group">
                 <div class="card bg-light row-sm-8" style="max-width: 18rem;">
-                    <div class="card-header">Energy Webpage</div>
+                    <div class="card-header">ITF</div>
                     <div class="card-body">
                         <img src="screenshot1.png" class="bd-placeholder-img rounded-circle border" width="180"
                             height="180" alt="">
-                        <h5 class="card-title">ITF</h5>
+                        <h5 class="card-title">Energy Webpage</h5>
                         <p class="card-text">เกี่ยวกับวิธีคิดและการคำนวณพลังงาน</p><br>
-                        <a href="port1/energy.html" class="form-control btn btn-primary">View</a>
+                        <a href="port1/energy.html" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
                 <div class="card bg-light row-sm-8" style="max-width: 18rem;">
-                    <div class="card-header">GoldPrice</div>
+                    <div class="card-header">Computer Programming</div>
                     <div class="card-body">
                         <img src="screenshot2.png" class="bd-placeholder-img rounded-circle border" width="180"
                             height="180" alt="">
-                        <h5 class="card-title">Computer Programming</h5>
+                        <h5 class="card-title">GoldPrice</h5>
                         <p class="card-text">โปรแกรมรายงานราคาทองในประเทศไทย ทั้งราคาทองคำแท่งและทองคำรูปพรรณประจำวัน
                         </p>
                         <a href="https://github.com/Kittipot321/GoldPrice_CP61P"
-                            class="form-control btn btn-primary">View</a>
+                            class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
                 <div class="card bg-light row-sm-8" style="max-width: 18rem;">
-                    <div class="card-header">Header</div>
+                    <div class="card-header">Multimedia Technology</div>
                     <div class="card-body">
-                        <h5 class="card-title">Light card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <img src="screenshot3.png" class="bd-placeholder-img rounded-circle border" width="180"
+                            height="180" alt="">
+                        <h5 class="card-title">Phra Maha Phichai Mongkut</h5>
+                        <p class="card-text">Design in Final Examination. <br><br></p>
+                        <a href="port3/61070014_Multi.html" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
                 <div class="card bg-light row-sm-8" style="max-width: 18rem;">
-                    <div class="card-header">Header</div>
+                    <div class="card-header">-----------</div>
                     <div class="card-body">
-                        <h5 class="card-title">Light card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
+                        <h5 class="card-title">-----------</h5>
+                        <p class="card-text">------------------------------------------------------------------
+                            ------------------------------------------------------------------
+                        </p>
+                        <a href="#" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
             </div><br>
@@ -152,7 +156,11 @@
                     <div class="card-header">รายงาน</div>
                     <div class="card-body">
                         <h5 class="card-title">Light card title</h5>
-                        <p class="card-text">PDF Test | <a href="404.html" class="btn-sm btn btn-warning">Download</a>
+                        <p class="card-text">PDF Test | <a href="404.html"
+                                class="btn-sm btn btn-warning col-sm-2">Download</a>
+                            <p class="card-text">Codepen | <a href="https://codepen.io/kittipot321"
+                                    class="btn-sm btn btn-outline-primary col-sm-2">View</a>
+                            </p>
                         </p>
                     </div>
                 </div>
