--- a/404.html
+++ b/404.html
@@ -23,33 +23,17 @@
 </head>
 <style>
     img {
-        max-width: 100%;
+        max-width: 50%;
     }
 </style>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-danger">
-        <a class="navbar-brand" href="../index.html">TopChoco</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="download.html">Download</a>
-                </li>
-            </ul>
-        </div>
+        <a class="navbar-brand" href="#">Error</a>
     </nav>
     <center>
         <img src="404-no-browser.png" alt=""><br>
+        <a href='../index.html' class='btn btn-primary'>Solve Problem!</a>
     </center>
 </body>
 
