--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="about/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="download.html">Download</a>
+                    <a class="nav-link" href="mydoc/document.html">Download</a>
                 </li>
             </ul>
         </div>
@@ -70,17 +70,17 @@
             <h3>My Program</h3>
             <hr>
             <div class="card-group">
-                <div class="card bg-light row-sm-8" style="max-width: 18rem;">
+                <div class="card bg-light row-lg" style="max-width: 18rem;">
                     <div class="card-header">ITF</div>
                     <div class="card-body">
                         <img src="screenshot1.png" class="bd-placeholder-img rounded-circle border" width="180"
                             height="180" alt="">
                         <h5 class="card-title">Energy Webpage</h5>
-                        <p class="card-text">เกี่ยวกับวิธีคิดและการคำนวณพลังงาน</p><br>
+                        <p class="card-text">เว็บไซต์สำหรับการหาวิธีคิดและการคำนวณพลังงาน</p><br>
                         <a href="port1/energy.html" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
-                <div class="card bg-light row-sm-8" style="max-width: 18rem;">
+                <div class="card bg-light row-lg" style="max-width: 18rem;">
                     <div class="card-header">Computer Programming</div>
                     <div class="card-body">
                         <img src="screenshot2.png" class="bd-placeholder-img rounded-circle border" width="180"
@@ -92,7 +92,7 @@
                             class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
-                <div class="card bg-light row-sm-8" style="max-width: 18rem;">
+                <div class="card bg-light row-lg" style="max-width: 18rem;">
                     <div class="card-header">Multimedia Technology</div>
                     <div class="card-body">
                         <img src="screenshot3.png" class="bd-placeholder-img rounded-circle border" width="180"
@@ -102,14 +102,14 @@
                         <a href="port3/61070014_Multi.html" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
-                <div class="card bg-light row-sm-8" style="max-width: 18rem;">
-                    <div class="card-header">-----------</div>
+                <div class="card bg-light row-lg" style="max-width: 18rem;">
+                    <div class="card-header">Web Programming</div>
                     <div class="card-body">
-                        <h5 class="card-title">-----------</h5>
-                        <p class="card-text">------------------------------------------------------------------
-                            ------------------------------------------------------------------
-                        </p>
-                        <a href="#" class="form-control btn btn-outline-primary">View</a>
+                        <img src="screenshot4.jpg" class="bd-placeholder-img rounded-circle border" width="180"
+                            height="180" alt=""><br><br>
+                        <h5 class="card-title">Coffee_POS</h5>
+                        <p class="card-text">เว็บแอปพลิเคชั่นจัดการสต๊อกสินค้าและคิวสั่งซื้อในร้านกาแฟ</p>
+                        <a href="https://github.com/Kittipot321/project-bear" class="form-control btn btn-outline-primary">View</a>
                     </div>
                 </div>
             </div><br>
@@ -118,21 +118,20 @@
                 <div class="card bg-light mb-3" style="max-width: 75rem;">
                     <div class="card-header">My Playground</div>
                     <div class="card-body">
-                        <h5 class="card-title">For practice</h5>
                         <a href="https://codepen.io/kittipot321">
                             <p class="btn-sm btn btn-outline-dark col-sm-2">Codepen</p>
                         </a>
-                        <a href="404.html">
-                            <p class="btn-sm btn btn-outline-danger col-sm-2">-</p>
+                        <a href="https://www.sololearn.com/Profile/6007488#">
+                            <p class="btn-sm btn btn-outline-success col-sm-2">Sololearn</p>
+                        </a>
+                        <a href="https://github.com/Kittipot321">
+                            <p class="btn-sm btn btn-outline-info col-sm-2">GitHub</p>
                         </a>
                         <a href="404.html">
-                            <p class="btn-sm btn btn-outline-danger col-sm-2">-</p>
+                            <p class="btn-sm btn btn-outline-danger col-sm-2">404</p>
                         </a>
                         <a href="404.html">
-                            <p class="btn-sm btn btn-outline-danger col-sm-2">-</p>
-                        </a>
-                        <a href="404.html">
-                            <p class="btn-sm btn btn-outline-danger col-sm-2">-</p>
+                            <p class="btn-sm btn btn-outline-danger col-sm-2">404</p>
                         </a>
                     </div>
                 </div>
@@ -142,10 +141,11 @@
 </body>
 <footer class="bd-footer">
     <div class="container-fluid bg-dark p-1 md-5 text-center">
-        <a href="https://www.facebook.com/kittipot.laorgsri"><img src="/about/facebook.png" class="image"></a>
-        <a href="https://twitter.com/Topfy5555"><img src="/about/twitter.png" class="image"></a>
-        <a href="https://www.instagram.com/topchoco_kl/"><img src="/about/instagram.png" class="image"></a>
-        <p class="text-center text-white">Copyright 2019 | TopChoco</p>
+        <a href="https://www.facebook.com/kittipot.laorgsri"><img src="../about/facebook.png" class="image"></a>
+        <a href="https://twitter.com/Topfy5555"><img src="../about/twitter.png" class="image"></a>
+        <a href="https://www.instagram.com/topchoco_kl/"><img src="../about/instagram.png" class="image"></a>
+        <a href="https://www.linkedin.com/in/กิตติพศ-ละอองศรี-101131170"><img src="../about/linkedin.png" class="image"></a>
+        <p class="text-center text-white">Copyright | TopChoco</p>
     </div>
 </footer>
 
